# cp-tox-fusion-mini

./: Makefile  model_card.md  pyproject.toml  requirements.txt
cp-tox-fusion-mini/: Makefile  README.md  env.yml
cp-tox-fusion-mini/config/: cellprofiler.cppipe
cp-tox-fusion-mini/scripts/: run_audit_and_temporal.py
cp-tox-fusion-mini/src/: download_bbbc021.py  download_tox21.py  error_analysis.py  extract_cp_features.py  fuse_modalities.py  segment_cellpose.py  train_models.py  utils.py
cp-tox-fusion-mini/tests/: test_qc.py
cp_tox_mini/: __init__.py  cli.py  diagnostics.py  dose_response.py  eval.py  features.py  hashing.py  io.py  reporting.py
data/raw/bbbc021/: plate_A1_w2.tiff
manifests/: data_manifest.json
src/: __init__.py  audit_temporal.py  build_descriptors.py  qc_metrics.py  uncertainty.py
tests/: test_diagnostics.py  test_eval.py  test_fusion.py  test_hashing.py  test_ic50.py  test_models.py  test_temporal_split.py  test_uncertainty.py
